fix page margin to avoid cutting off number

--- a/style/calendar-mod.css
+++ b/style/calendar-mod.css
@@ -118,6 +118,6 @@ html, body {
 }
 @page {
     size: landscape;
-    margin: 6pt 0;
+    margin: 6pt 2pt;
 }	  
  
